--- a/public/index.html
+++ b/public/index.html
@@ -46,4 +46,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script
+    src="https://kit.fontawesome.com/59d95b837d.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
