--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,17 @@
       <input type="email" name="email" />
       <textarea name="message"></textarea>
     </form>
+
+    <form
+      name="newsletter"
+      method="post"
+      data-netlify="true"
+      netlify-honeypot="bot-field"
+      hidden
+    >
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+    </form>
   </body>
   <script
     src="https://kit.fontawesome.com/59d95b837d.js"
