--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
     >
       <input type="text" name="name" />
       <input type="email" name="email" />
+      <input type="message" name="message" />
     </form>
   </body>
   <script
